# CommonLibFO4

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  main_ci.yml  maintenance.yml
CommonLibF4/: CMakeLists.txt
CommonLibF4/cmake/: sourcelist.cmake
CommonLibF4/include/RE/: FO4Runtime.h  Fallout.h
F4SEStub/loader/src/: main.cpp
F4SEStub/steam_loader/src/: main.cpp
Tests/: CMakeLists.txt
Tests/src/: BSTHashMap.cpp
cmake/: CommonLibF4Config.cmake.in  CommonLibF4Plugin.cmake
include/F4SE/: Version.h
include/RE/: FO4Runtime.h  Fallout.h  IDs.h
include/RE/A/: AIFormulas.h  AIProcess.h  ActiveEffect.h  ActiveEffectReferenceEffectController.h  Actor.h  ActorMotionFeedbackData.h  AimModel.h
include/RE/B/: BGSAudio.h  BGSCharacterMorph.h  BGSColorForm.h  BGSExplosionData.h  BGSInventoryList.h  BGSPrimitive.h  BGSStaticCollection.h  BGSTransform.h  BGSZoomData.h  BIPED_OBJECT.h  BSAudioManager.h  BSBound.h  BSFurnitureMarker.h  BSGraphics.h  BSHavok.h  BSLensFlareSpriteData.h  BSMaterialObject.h  BSNavmeshGrid.h  BSNavmeshTriLocation.h  BSNavmeshVertex.h  BSNavmeshWaypoint.h  BSOcclusionBox.h  BSPathingAvoidNode.h  BSPathingFaceTarget.h  BSPathingGoal.h  BSPathingLocation.h  BSShaderAccumulator.h  BSShaderData.h  BSShaderManager.h  BSShaderMaterial.h  BSShaderResourceManager.h  BSSoundHandle.h  BSSpring_SpringState.h  BSStringT.h  BSTempEffectDebris.h  BSTempEffectGeometryDecal.h  BSTempEffectParticle.h  BSTerrainEffect.h  BSTransformDeltaEvent.h  BSVisit.h  (+11 more)
include/RE/C/: COL_LAYER.h  CameraStates.h  CombatFormulas.h  CombatUtilities.h
include/RE/D/: DECAL_CREATION_DATA.h  DETECTION_FORMULA_TYPE.h  DETECTION_TYPE.h  DamageImpactData.h  DesiredMovementData.h  DetectionData.h  DetectionEvent.h  DetectionFormulaData.h  DialogueMenu.h  DoorTeleportData.h
include/RE/E/: EXTERIOR_DATA.h  EquippedWeaponData.h  Explosion.h  ExtraBendableSplineParams.h  ExtraDataList.h
include/RE/F/: FleePackage.h  FreeCameraState.h
include/RE/G/: GridCellArray.h
include/RE/H/: HUDMenuUtils.h  HighProcessData.h  hclTriangleBuffer.h  hclVectorBuffer.h  hkAabb.h  hkArray.h  hkBaseObject.h  hkBitField.h  hkBlockStream.h  hkBlockStreamBase.h  hkBool.h  hkContainerHeapAllocator.h  hkCriticalSection.h  hkDisplaySerializeIStream.h  hkDisplaySerializeOStream.h  hkEnum.h  hkFreeListArray.h  hkHalf.h  hkHandle.h  hkHardwareInfo.h  hkIArchive.h  hkIntSpaceUtil.h  hkLifoAllocator.h  hkLocalArray.h  hkMap.h  hkMatrix3.h  hkMemoryAllocator.h  hkMemoryRouter.h  hkMemorySystem.h  hkMonitorStream.h  hkMultiMap.h  hkOArchive.h  hkProcess.h  hkProcessContext.h  hkProcessFactory.h  hkQsTransformf.h  hkQuaternion.h  hkRefPtr.h  hkReferencedObject.h  hkRelArray.h  (+68 more)
include/RE/I/: IMovementState.h  IRendererResourceManager.h  IdleMovementData.h  ImpactResult.h  Interface3D.h  Inventory3DManager.h
include/RE/L/: LOADED_REF_DATA.h  LoadingMenu.h  LockpickingMenu.h
include/RE/M/: MenuControls.h  MenuTopicManager.h  MiddleHighProcessData.h  MissileProjectile.h  MoveData.h  MovementCorrection.h  MovementCorrectionData.h  MovementData.h  MovementTweenerOutputData.h  MovementVector.h
include/RE/N/: NEW_REFR_DATA.h  NiAVObject.h  NiBinaryExtraData.h  NiBooleanExtraData.h  NiCloningProcess.h  NiCollisionObject.h  NiColor.h  NiColorExtraData.h  NiExtraData.h  NiExtraDataContainer.h  NiFloatExtraData.h  NiIntegerExtraData.h  NiMatrix3.h  NiObject.h  NiObjectNET.h  NiParticleInfo.h  NiPoint2.h  NiPoint3.h  NiPoint4.h  NiRTTI.h  NiStringExtraData.h  NiTransform.h
include/RE/O/: OBJ_REFR.h
include/RE/P/: PART_DATA.h  PLAYER_TARGET_LOC.h  PipboyCommand.h  PipboyCommandResult.h  PipboyMapData.h  PlayerCamera.h  PlayerCharacter.h  PlayerControlsData.h  PlayerControlsMovementData.h  PlayerCoverData.h  PowerUtils.h  Projectile.h  ProjectileLaunchData.h
include/RE/R/: RACE_DATA.h  RACE_SIZE.h  REFR_LOCK.h  RadioManager.h  RagDollBone.h  RagDollData.h  ReferenceEffectController.h
include/RE/S/: STAGGER_MAGNITUDE.h  SpectatorPackage.h  SpectatorThreatInfo.h  SummonPlacementEffect.h
include/RE/T/: TES.h  TESCameraState.h  TESClimate.h  TESEyes.h  TESGrass.h  TESImageSpaceModifier.h  TESNPC.h  TESObjectARMA.h  TESObjectCELL.h  TESObjectREFR.h  TESRace.h  TESRegionPoint.h  TESTopicInfo.h  TESWaterForm.h  TESWorldSpace.h  TaskQueueInterface.h  (+2 more)
(+31 files in other folders)
